# torchnmt

./: .gitignore  .pre-commit-config.yaml  README.md  makefile  pyproject.toml  run.py
.github/workflows/: test.yaml
config/: config.yaml  eval.yaml
config/dataset/: build.yaml  load.yaml
config/dataset/tokenizer/: bpe.yaml  word.yaml
config/model/: bahdanau.yaml  load.yaml  luong.yaml  model_base.yaml  rnn_base.yaml  sutskever.yaml  transformer.yaml
config/train/: rnn_base.yaml  sutskever.yaml  train_base.yaml  transformer.yaml
requirements/: base.in  base.txt  dev.in  dev.txt  local.in  local.txt
tests/: test_forward.py  utils.py
tests/data/: test_bpe.py  test_dataset.py  test_loader.py  test_word.py
tests/model/: test_rnn.py  test_transformer.py
tests/search/: test_rnn_beam.py  test_transformer_beam.py
torchnmt/: __init__.py  config.py  eval.py  forward.py  setup.py  train.py
torchnmt/data/: __init__.py  bpe.py  config.py  dataset.py  loader.py  models.py  source.py  word.py
torchnmt/model/: __init__.py  config.py  model.py  rnn.py  transformer.py
torchnmt/search/: __init__.py  beam.py  rnn_beam.py  transformer_beam.py
